# app-analyse

./: .gitignore  Dockerfile  README.md  analyses.py  app.py  docker-compose.yml  env.example  models.py  plots.py  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  run_app.ps1  utils.py
.github/workflows/: ci-cd.yml
.history/src/app/: main_20251002010914.py
.history/src/evaluation/: metrics_20251002013339.py  metrics_20251002021424.py
.history/src/models/: training_20251001234738.py  training_20251002012617.py  (+3 more)
assets/: styles.css
components/: dashboard.py  data_import.py  evaluation.py  export.py  preprocessing.py  reporting.py  sidebar.py
ml/: catalog.py  data_preprocessing.py  evaluation.py  training.py  unsupervised_validation.py
ml/evaluation/: __init__.py  metrics_calculation.py  visualization.py
pages/: 1_📊_Dashboard.py  2_⚙️_Configuration_ML.py  3_📈_Évaluation_du_Modèle.py  3_🤖_Modélisation.py
plots/: exploratory.py  model_evaluation.py  templates.py
src/app/: main.py
src/config/: constants.py  settings.py
src/data/: data_analysis.py  data_loader.py  preprocessing.py
src/evaluation/: exploratory_plots.py  metrics.py  model_plots.py  templates.py
src/models/: catalog.py  persistence.py  training.py
src/monitoring/: drift.py  system.py
src/shared/: logging.py  state.py
tests/: conftest.py  test_catolog.py  test_data_validation.py  test_lancement.py  test_model_plots.py  test_training.py
utils/: data_analysis.py  data_loading.py  logging_config.py  mlflow.py  model_persistence.py  report_generator.py  reproducibility.py
(+7 files in other folders)
