[project]
name = "app-analyse"
version = "0.1.0"
description = "Application Streamlit pour l'analyse et l'entraînement de modèles ML avec MLflow"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.1",
    "mlflow>=2.16.2",
    "xgboost>=2.1.1",
    "joblib>=1.4.2",
    "psutil>=6.0.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "mypy>=1.11.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache"
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = [
    '\.venv/',
    '\.mypy_cache/',
    'tests/',
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]